--- a/bounty_drive/configs/config.ini
+++ b/bounty_drive/configs/config.ini
@@ -2,10 +2,13 @@
 extension = 
 subdomain = true
 do_web_scap = true
-target_file = target_earlywarnings.txt
-experiment_file_path = reports/experiment_results_earlywarning.csv
+target_file = configs/target_mozzila.txt
+target_login = []
+experiment_file_path = outputs/reports/experiment_results_mozzila.csv
 logging=DEBUG
 max_thread = 30
+need_specific_user_agent = false
+target_user_agent = RingResearcher_elniak
 
 [GoogleDorking]
 do_dorking_google = true
@@ -14,6 +17,7 @@ page_no = 1
 default_total_output = 10
 default_page_no = 1
 lang = en
+use_selenium = false
 
 [GithubDorking]
 do_dorking_github = false
@@ -24,6 +28,12 @@ encode_xss = true
 fuzz_xss = true
 blind_xss = true
 dom_xss = true
+
+[crawler]
+do_crawl = true
+skip_dom = false
+level = 2
+
 
 [SQLi]
 do_sqli = false
@@ -58,3 +68,6 @@ waf_delay = 600
 [Rate]
 rate_per_minute = 1
 current_delay = 60
+
+[BountyIDs]
+hackerone=elniak
