+- finish adding xssstriker

--- a/bounty_drive/configs/config.ini
+++ b/bounty_drive/configs/config.ini
@@ -25,15 +25,14 @@ do_dorking_github = false
 [XSS]
 do_xss = true
 encode_xss = true
-fuzz_xss = true
+fuzz_xss = false
 blind_xss = true
 dom_xss = true
 
 [crawler]
 do_crawl = true
 skip_dom = false
-level = 2
-
+level = 1
 
 [SQLi]
 do_sqli = false
