add documentation adn change result (todo)

--- a/bounty_drive/configs/config.ini
+++ b/bounty_drive/configs/config.ini
@@ -2,13 +2,18 @@
 extension = 
 subdomain = true
 do_web_scap = true
-target_file = configs/target_mozzila.txt
+target_file = configs/target_rei.txt
 target_login = []
-experiment_file_path = outputs/reports/experiment_results_mozzila.csv
+experiment_file_path = outputs/reports/experiment_results_rei.csv
 logging=DEBUG
 max_thread = 30
+runtime_save = true
+keyboard_interrupt_save = true
+
+[Bounty]
 need_specific_user_agent = false
 target_user_agent = RingResearcher_elniak
+hackerone_username = elniak
 
 [GoogleDorking]
 do_dorking_google = true
@@ -21,6 +26,9 @@ use_selenium = false
 
 [GithubDorking]
 do_dorking_github = false
+
+[ShodanDorking]
+do_dorking_shodan = false
 
 [XSS]
 do_xss = true
@@ -37,6 +45,9 @@ level = 1
 [SQLi]
 do_sqli = false
 
+[API]
+do_api = false
+
 [Proxy]
 use_proxy = true
 use_free_proxy_file = false
@@ -50,6 +61,9 @@ proxy_factor = 1
 use_vpn = false
 use_nordvpn = false
 nord_vpn_login = []
+
+[Tor]
+use_tor=false
 
 [Search]
 default_extension = 
@@ -67,6 +81,3 @@ waf_delay = 600
 [Rate]
 rate_per_minute = 1
 current_delay = 60
-
-[BountyIDs]
-hackerone=elniak
