add skelleton for other module + refactor readme + reporting

--- a/bounty_drive/configs/config.ini
+++ b/bounty_drive/configs/config.ini
@@ -4,7 +4,6 @@ subdomain = true
 do_web_scap = true
 target_file = configs/target_rei.txt
 target_login = []
-experiment_file_path = outputs/reports/experiment_results_rei.csv
 logging=DEBUG
 max_thread = 30
 runtime_save = true
@@ -41,6 +40,7 @@ dom_xss = true
 do_crawl = true
 skip_dom = false
 level = 1
+update_path = false
 
 [SQLi]
 do_sqli = false
