--- a/bounty_drive/configs/config.ini
+++ b/bounty_drive/configs/config.ini
@@ -2,7 +2,7 @@
 extension = 
 subdomain = true
 do_web_scap = true
-target_file = configs/target_pornbox.txt
+target_file = configs/target_toolsforhumanity.txt
 exclusion_file = configs/exclusion_pornbox.txt
 target_login = []
 logging=DEBUG
@@ -52,8 +52,8 @@ do_api = false
 [Proxy]
 use_proxy = true
 use_free_proxy_file = false
-use_free_proxy = true
-use_nordvpn_proxy = false
+use_free_proxy = false
+use_nordvpn_proxy = true
 proxies = [None]
 proxy_mean_delay = 10
 proxy_factor = 1
