--- a/requirements_pypy.txt
+++ b/requirements_pypy.txt
@@ -1,6 +1,7 @@
 terminal_banner
 termcolor
 tqdm
+types-tqdm
 selenium
 urllib3==1.17
 cryptography==38.0.4
@@ -14,4 +15,6 @@ SpeechRecognition==3.8.1
 pydub
 bs4
 psutil
+types-beautifulsoup4
 random_user_agent
+types-psutil
